--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,6 +15,8 @@
       duration="500"
       circular="{{bannerList.length > 1}}"
       bindchange="onBannerChange"
+      touchable="{{true}}"
+      disable-touch="{{false}}"
     >
       <swiper-item wx:for="{{bannerList}}" wx:key="bannerId" wx:for-item="banner">
         <image class="banner-image" src="{{banner.imageUrl}}" mode="aspectFill"></image>
