--- a/pages/audit/merchant/member/member.wxss
+++ b/pages/audit/merchant/member/member.wxss
@@ -67,6 +67,25 @@
   font-size: 20rpx;
 }
 
+/* 商户信息显示样式（当只有一个商户时） */
+.merchant-info {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80rpx;
+  padding: 0 24rpx;
+  border: 1rpx solid #E5E5E5;
+  border-radius: 8rpx;
+  font-size: 28rpx;
+  box-sizing: border-box;
+  background-color: #F0F9FF;
+}
+
+.merchant-name {
+  color: #1890FF;
+  font-weight: 500;
+}
+
 /* 商户选择器弹窗 */
 .merchant-picker {
   position: fixed;
