--- a/pages/alumni-association/organization/organization.wxml
+++ b/pages/alumni-association/organization/organization.wxml
@@ -3,7 +3,7 @@
 <custom-nav-bar title="组织架构" showBack="{{true}}"></custom-nav-bar>
 
 <view class="container">
-  <view class="form-card" wx:if="{{!hasSingleAlumniAssociation}}">
+  <view class="form-card" wx:if="{{!hasSingleAlumniAssociation && hasAlumniAdminPermission}}">
     <view class="form-title">校友会组织</view>
 
     <!-- 选择校友会 -->
