--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -9,7 +9,10 @@
       <image class="user-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill" bindtap="editProfile" wx:if="{{userInfo.avatarUrl}}"></image>
       <view class="user-avatar-placeholder" bindtap="editProfile" wx:else></view>
       <view class="user-detail">
-        <view class="user-name">{{userInfo.nickname || '用户'}}</view>
+        <view class="user-name-container">
+          <text class="user-name">{{userInfo.nickname || '用户'}}</text>
+          <text class="alumni-badge" wx:if="{{userInfo.isAlumni === 1}}">校友</text>
+        </view>
         <view class="edit-hint" bindtap="editProfile">编辑资料 ›</view>
       </view>
       <!-- 关注和粉丝统计 -->
