--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -65,7 +65,7 @@
       </view>
       <text class="menu-arrow">›</text>
     </view>
-    <view class="menu-item">
+    <view class="menu-item" bindtap="navigateTo" data-url="/pages/profile/alumni-association/alumni-association">
       <view class="menu-left">
         <image class="menu-icon-img" src="{{iconSwhz}}" mode="aspectFit"></image>
         <text class="menu-name">我的校友会</text>
@@ -79,13 +79,14 @@
       </view>
       <text class="menu-arrow">›</text>
     </view>
-    <view class="menu-item" bindtap="navigateTo" data-url="/pages/profile/cooperation/cooperation">
+    <!-- 商务合作 - 暂时注释掉 -->
+    <!-- <view class="menu-item" bindtap="navigateTo" data-url="/pages/profile/cooperation/cooperation">
       <view class="menu-left">
         <image class="menu-icon-img" src="{{iconSwhz}}" mode="aspectFit"></image>
         <text class="menu-name">商务合作</text>
       </view>
       <text class="menu-arrow">›</text>
-    </view>
+    </view> -->
     <view class="menu-item" bindtap="navigateTo" data-url="/pages/my-favorites/my-favorites">
       <view class="menu-left">
         <image class="menu-icon-img" src="{{iconWdsc}}" mode="aspectFit"></image>
